--- a/b-final.ipynb
+++ b/b-final.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -101,28 +101,28 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " su\n"
+      " Su\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello,su!how are you feeling today ?\n"
+      "Hello,Su!how are you feeling today ?\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " bad\n"
+      " good\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorry to hear that .\n"
+      "Great,I am feeling good,too!\n"
      ]
     }
    ],
@@ -131,7 +131,7 @@
     "name = input()\n",
     "print(f\"Hello,{name}!how are you feeling today ?\")\n",
     "feeling = input()\n",
-    "if \"good\" in feeling:\n",
+    "if \"good\" in feeling.lower():\n",
     "    print(\"Great,I am feeling good,too!\" )\n",
     "else:\n",
     "    print(\"Sorry to hear that .\")\n",
@@ -147,11 +147,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What's your weather like ,there?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " nice\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Any weather is good weather ,don't you think so? here is raining.Do you love raining?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " yes\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Same here,Rain drops bring me good luck!\n",
+      "Tell me Su,what's your favorite color?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " red\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oh, ok.sounds interesting .my favorite color is red too.\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"What's your favorit color?\")"
+    "print(\"What's your weather like ,there?\")\n",
+    "weather = input()\n",
+    "weather = ['raining','cloudy','nice','windy','bad',]\n",
+    "print ('Any weather is good weather ,don\\'t you think so? here is raining.Do you love raining?')\n",
+    "answer = input()\n",
+    "if 'no'in answer.lower():\n",
+    "    print(\"Sorry to hear that .Now please tell me what's your favorit weather?\")\n",
+    "else:\n",
+    "    print(\"Same here,Rain drops bring me good luck!\")\n",
+    "    \n",
+    "print(f\"Tell me {name},what's your favorite color?\")\n",
+    "favcolor = input()\n",
+    "colors = ['red','orange','yellow','green','blue','purple',]\n",
+    "print(f\"oh, ok.sounds interesting .my favorite color is {favcolor} too.\")\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -167,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "feeling.lower"
    ]
   },
   {
@@ -179,11 +245,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Su,what's your favorite subject?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " maths\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice,my favorite subject is {random.choice (subjects)}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "import random\n",
+    "\n",
+    "print(f\"{name},what's your favorite subject?\")\n",
+    "favsub = input()\n",
+    "subjects = ['English','Maths','History','Programming','foreign language','Football','Music',]\n",
+    "print(\"Nice,my favorite subject is {random.choice (subjects)}\")\n"
    ]
   },
   {
