--- a/b-final.ipynb
+++ b/b-final.ipynb
@@ -245,38 +245,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Su,what's your favorite subject?\n"
+      "what's your favorite subject?\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " maths\n"
+      " history\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nice,my favorite subject is {random.choice (subjects)}\n"
+      "Nice,You like history? my favorite subject is Programming\n"
      ]
     }
    ],
    "source": [
     "import random\n",
     "\n",
-    "print(f\"{name},what's your favorite subject?\")\n",
+    "print(\"what's your favorite subject?\")\n",
     "favsub = input()\n",
-    "subjects = ['English','Maths','History','Programming','foreign language','Football','Music',]\n",
-    "print(\"Nice,my favorite subject is {random.choice (subjects)}\")\n"
+    "subjects = ['English','Maths','History','Programming','Football','Music',]\n",
+    "print(f\"Nice,You like {favsub.lower()}? my favorite subject is {random.choice(subjects)}\")\n",
+    "\n"
    ]
   },
   {
@@ -332,7 +333,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Bot\n",
+    "def "
    ]
   },
   {
