--- a/greeting.ipynb
+++ b/greeting.ipynb
@@ -192,10 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,1,1,2,3,5,8,"
+     ]
+    }
+   ],
+   "source": [
+    "a,b = 0,1\n",
+    "while a < 10:\n",
+    "    print (a,end=',')\n",
+    "    a,b = b,a+b\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
