--- a/p1-1-understanding-programming-languages.ipynb
+++ b/p1-1-understanding-programming-languages.ipynb
@@ -27,7 +27,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    },
+    "tags": [
+     "mark"
+    ]
+   },
    "source": [
     "计算机本身并不复杂，大致上就是三部分：\n",
     "* 负责执行指令的**中央处理器（CPU）**；\n",
@@ -226,7 +233,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -240,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
