--- a/p1-2-structure-1.ipynb
+++ b/p1-2-structure-1.ipynb
@@ -181,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码\n"
+    "# 请在这里输入代码"
    ]
   },
   {
@@ -319,6 +319,68 @@
     "* 变量是值的抽象，可以帮助我们处理用户输入的任何值；\n",
     "* 赋值语句是值与变量、变量与变量之间的桥梁。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0x0 : 0.7V\n",
+      "0x1 : 0.725V\n",
+      "0x2 : 0.75V\n",
+      "0x3 : 0.7749999999999999V\n",
+      "0x4 : 0.7999999999999999V\n",
+      "0x5 : 0.825V\n",
+      "0x6 : 0.85V\n",
+      "0x7 : 0.875V\n",
+      "0x8 : 0.8999999999999999V\n",
+      "0x9 : 0.9249999999999999V\n",
+      "0xa : 0.95V\n",
+      "0xb : 0.975V\n",
+      "0xc : 1.0V\n",
+      "0xd : 1.025V\n",
+      "0xe : 1.05V\n",
+      "0xf : 1.075V\n",
+      "0x10 : 1.1V\n",
+      "0x11 : 1.125V\n",
+      "0x12 : 1.15V\n",
+      "0x13 : 1.175V\n",
+      "0x14 : 1.2V\n",
+      "0x15 : 1.225V\n",
+      "0x16 : 1.25V\n",
+      "0x17 : 1.275V\n",
+      "0x18 : 1.3V\n",
+      "0x19 : 1.325V\n",
+      "0x1a : 1.35V\n",
+      "0x1b : 1.375V\n",
+      "0x1c : 1.4V\n",
+      "0x1d : 1.425V\n",
+      "0x1e : 1.45V\n",
+      "0x1f : 1.475V\n"
+     ]
+    }
+   ],
+   "source": [
+    "#add a new test for calculate SPI_LVDS_SEL_VCM\n",
+    "def cal_spi_lvds_sel_vcm():\n",
+    "    for vcm in range(32):\n",
+    "        print(hex(vcm) + ' : ' +str(0.7+vcm*0.025) +\"V\")\n",
+    "    pass\n",
+    "\n",
+    "cal_spi_lvds_sel_vcm()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -337,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
