--- a/p1-6-structure-5.ipynb
+++ b/p1-6-structure-5.ipynb
@@ -78,11 +78,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please input a number 23\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your number is: 23\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "while True:\n",
+    "    try:\n",
+    "        x = int(input('Please input a number'))\n",
+    "        break\n",
+    "    except ValueError:\n",
+    "        print('Not a valid number. try agian...')\n",
+    "        \n",
+    "print('Your number is:',x)"
    ]
   },
   {
@@ -96,11 +118,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Handing run-time error: division by zero\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def this_fails():\n",
+    "    x = 1/0\n",
+    "    \n",
+    "try:\n",
+    "    this_fails()\n",
+    "except ZeroDivisionError as err:\n",
+    "    print('Handing run-time error:',err)"
    ]
   },
   {
