--- a/p1-5-structure-4.ipynb
+++ b/p1-5-structure-4.ipynb
@@ -47,11 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "primes = [2, 3, 5, 7]\n",
+    "for prime in primes:\n",
+    "    print(prime)"
    ]
   },
   {
@@ -86,11 +99,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "list(range(6))"
    ]
   },
   {
@@ -104,29 +128,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "list(range(2, 10)) # 注意 range() 输出是从 start 开始，到 stop-1 结束，也就是说，不包含后一个参数本身"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "list(range(2, 10, 1)) # step 的缺省值就是 1，所以这句和上一句完全等价"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 5, 8]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "list(range(2, 10, 3)) # 这次指定了 3 作为公差，"
    ]
   },
   {
@@ -138,11 +195,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "d\n",
+      "g\n",
+      "a\n",
+      "d\n",
+      "g\n",
+      "s\n",
+      "d\n",
+      "a\n",
+      "g\n",
+      "a\n",
+      "s\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "s = 'adgadgsdagas'\n",
+    "for c in s:\n",
+    "    print(c)"
    ]
   },
   {
@@ -168,11 +246,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "Loop ends.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "count = 0\n",
+    "while count < 5:\n",
+    "    print(count)\n",
+    "    count += 1\n",
+    "    \n",
+    "print('Loop ends.')"
    ]
   },
   {
@@ -211,11 +307,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for x in range(10):\n",
+    "    if x % 2 == 0:\n",
+    "        continue\n",
+    "    print(x)"
    ]
   },
   {
@@ -227,11 +338,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 is even\n",
+      "2 is even\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from random import randrange\n",
+    "\n",
+    "while True:\n",
+    "    n = randrange(-2, 5) # randrange 返回一个给定范围的随机整数\n",
+    "    if n < 0:\n",
+    "        break\n",
+    "    elif n % 2 == 0:\n",
+    "        print(n, 'is even')\n",
+    "    else:\n",
+    "        print(n, 'is odd')"
    ]
   },
   {
